# pyTAU

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
examples/: README.md  example.graph  example.py  requirements.txt
src/: genetic_algorithm.py  main.py  partition.py
tau/: __init__.py  partition.py  tau.py
