[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="tau-graph-clustering"
version="0.1.1"
dependencies = [
    "numpy",
    "python_igraph",
    "scikit_learn"
]
description="TAU is a genetic algorithm for graph clustering"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/aberdichevskaya/pyTAU"
