[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name="tau-graph-clustering"
version="0.1.6"
dependencies = [
    "numpy>=1.14.0",
    "igraph>=0.9.8",
    "scikit_learn>=0.24.0"
]
description="TAU is a genetic algorithm for graph clustering"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/aberdichevskaia/pyTAU"
